--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVer"
     kapt "com.google.dagger:dagger-compiler:$daggerVer"
 
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
@@ -65,5 +64,6 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
 }
